crates/turborepo/tests/snapshots/dry_json__monorepo_global_cache_inputs.snap
---
source: crates/turborepo/tests/dry_json.rs
expression: "json[\"globalCacheInputs\"]"
---
{
  "rootKey": "I can’t see ya, but I know you’re here",
  "files": {
    "foo.txt": "eebae5f3ca7b5831e429e947b7d61edd0de69236"
  },
  "hashOfExternalDependencies": "459c029558afe716",
  "hashOfInternalDependencies": "",
  "environmentVariables": {
    "specified": {
      "env": [
        "SOME_ENV_VAR"
      ],
      "passThroughEnv": null
    },
    "configured": [],
    "inferred": [],
    "passthrough": null
  },
  "engines": null
}
