crates/turborepo/tests/snapshots/dry_json__monorepo_top_level_keys.snap
---
source: crates/turborepo/tests/dry_json.rs
expression: keys
---
[
  "envMode",
  "estimatedUncachedDuration",
  "frameworkInference",
  "globalCacheInputs",
  "id",
  "monorepo",
  "packages",
  "scm",
  "tasks",
  "turboVersion",
  "user",
  "version"
]
