crates/turborepo/tests/snapshots/dry_json__monorepo_util_build_env_vars_with_node_env.snap
---
source: crates/turborepo/tests/dry_json.rs
expression: env_vars
---
{
  "specified": {
    "env": [
      "NODE_ENV"
    ],
    "passThroughEnv": null
  },
  "configured": [
    "NODE_ENV=b493d48364afe44d11c0165cf470a4164d1e2609911ef998be868d46ade3de4e"
  ],
  "inferred": [],
  "passthrough": null
}
